feat: 完成BasicLayout 布局

--- a/.babelrc
+++ b/.babelrc
@@ -11,6 +11,11 @@
     "@babel/preset-typescript"
   ],
   "plugins": [
+    ["import", {
+      "libraryName": "antd",
+      "libraryDirectory": "es",
+      "style": "css"
+    }],
     [
       "@babel/plugin-transform-runtime",
       {
