--- a/package.json
+++ b/package.json
@@ -39,10 +39,20 @@
   "author": "Yangjay <yj960203only@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
     "@babel/runtime-corejs3": "^7.12.5",
+    "@reduxjs/toolkit": "^1.5.0",
+    "antd": "^4.10.2",
     "axios": "^0.21.1",
+    "connected-react-router": "^6.8.0",
+    "history": "^4.10.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-acl-router": "^1.0.0",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -52,13 +62,17 @@
     "@babel/preset-typescript": "^7.12.7",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@types/history": "^4.7.8",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.15",
+    "@types/react-router-dom": "^5.1.7",
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "autoprefixer": "^10.2.1",
     "babel-loader": "^8.2.2",
+    "babel-plugin-import": "^1.13.3",
     "clean-webpack-plugin": "^3.0.0",
     "conventional-changelog-cli": "^2.1.1",
     "copy-webpack-plugin": "^6.1.1",
