--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "axios": "^0.21.1",
     "connected-react-router": "^6.8.0",
     "history": "^4.10.1",
+    "js-cookie": "^2.2.1",
     "react": "^17.0.1",
     "react-acl-router": "^1.0.0",
     "react-dom": "^17.0.1",
